[project]
name = "cass"
version = "0.1.1"
description = "Cassandra platform CLI — cookie sync, MCP key management"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.scripts]
cass = "cass.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cass"]
