[project]
name = "cass"
version = "0.6.0"
description = "Cassandra platform CLI — auth, keys, cookies, and service management"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "websockets>=13.0",
    "qrcode>=8.0",
]

[project.scripts]
cass = "cass.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cass"]
